fixed spacing, position etc

--- a/main.css
+++ b/main.css
@@ -152,12 +152,12 @@ header {
 }
 .book-list{
     top: 65%;
-    left: 60%;
+    left: 55%;
     transform: translate(-50%, -50%);
     list-style-type:none;
     position: absolute;
     height: 45vh;
-    width:90vw;
+    width: 80vw;
     margin: 0px;
     padding: 0;
     border: 0px;
@@ -184,14 +184,14 @@ header {
     height: 7vh;
     position: absolute;
     top: 10%;
-    left: 21.5%;
+    left: 10%;
     transform: translate(-50%, -50%);
     
 }
 .footer p{
     width: 25vw;
     position: absolute;
-    left: 35%;
+    left: 14.6%;
     top: 30%;
     transform: translate(-50%, -50%);
     
@@ -200,7 +200,7 @@ header {
     list-style-type:none;
     display: inline;
     position: absolute;
-    width: 20vw;
+    width: 18vw;
 }
 footer ul li{
     margin: 2vh;
@@ -214,16 +214,17 @@ footer ul li{
 }
 .footer-right{
     position: relative;
-
+    background: #F24C1A;
     height: 45vh;
-    width: 40vw;
+    width: 35vw;
     left: 50%;
-    bottom: 86%
+    bottom: 86%;
+    margin: 0px;
 }
 
 .li-1{
     top: 40%;
-    left: 50%;
+    left: 65%;
     transform: translate(-50%, -50%);
 }
 
@@ -236,7 +237,7 @@ footer ul li{
     width: 30vw;
     position: absolute;
     top: 60%;
-    left: 41%;
+    left: 17%;
     transform: translate(-50%, -50%);
 }
 
